[package]
name = "clash"
version = "0.1.0"
edition = "2024"
description = "⚔️ Run commands head-to-head and compare their performance. Measures time AND memory."
license = "MIT"
repository = "https://github.com/mohsinrashid64/clash-cli"
keywords = ["benchmark", "performance", "cli", "comparison"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
comfy-table = "7.2.2"
indicatif = "0.18.4"
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.1"
